--- a/index.html
+++ b/index.html
@@ -131,115 +131,88 @@ section {
 </div>
 
 <section>
-    <p><strong>आदर्श प्रशांत म्हात्रे हा  महिलांची आर्थिक फसवणूक करणारा भामटा आहे, त्याने आजपर्यंत  अनेक महिलांना फसवले आहे. लग्न जुळवणाऱ्या वेबसाईटवर स्वतःचे profile जयेश पाटील, तन्मय म्हात्रे, आदित्य म्हात्रे, आणि नवहूश म्हात्रे - अश्या विविध खोट्या नावांनी बनवुन तरुणींना आर्थिक गंडा घालणाऱ्या या महाठकावर अशाच प्रकारचे अनेक  गुन्हे मुंबई, नवी मुंबई, ठाणे, रायगड, पिंपरी आणि पुणे याठिकाणी दाखल आहेत.</strong></p>
-  <p>आदर्श म्हात्रे हा मूळचा <strong>केगाव, उरण, रायगड</strong> येथील आहे. तो <strong> हाशिवारे, अलिबाग</strong> आणि <strong>भोपाळ</strong> येथे देखील राहिला आहे. पोलिस आणि कायद्या पासून वाचण्यासाठी तो सतत आपले location बदलत असतो. तो <strong>पुणे किंवा मुंबई</strong> येथे राहत असून, त्याचे नातेवाईक <strong>तुराडे, रसायनी</strong> आणि <strong>करंजडे, पनवेल</strong> येथे स्थायिक असलेल्या नातेवाईकांना भेटण्यासाठी येत असतो.<p>
-  <p>आदर्श म्हात्रे हा विवाहित आहे आणि त्याची पत्नी व मुलगा <strong>भोपाळ</strong> मध्ये राहतात. तो २०१९ पासून फसवणुकीचे धंदे करतो .अटक होऊनही तो bail मधून सुटून बाहेर आल्यावर असे फसवणुकीचे काम चालू ठेवतो .</p>
+    <p><strong>आदर्श प्रशांत म्हात्रे हा  महिलांची आर्थिक फसवणूक करणारा भामटा आहे, त्याने आजपर्यंत  अनेक महिलांना फसवले आहे. लग्न जुळवणाऱ्या वेबसाईटवर स्वतःचे profile जयेश पाटील, तन्मय म्हात्रे, आदित्य म्हात्रे, आणि नहूश म्हात्रे - अश्या विविध खोट्या नावांनी बनवुन तरुणींना आर्थिक गंडा घालणाऱ्या या महाठकावर अशाच प्रकारचे अनेक  गुन्हे मुंबई, नवी मुंबई, ठाणे, रायगड, पिंपरी आणि पुणे याठिकाणी दाखल आहेत.</strong></p>
+  <p>आदर्श म्हात्रे हा मूळचा <strong>केगाव-उरण</strong> येथील आहे. तो <strong> 
+कवाडे-अलिबाग</strong> आणि <strong>भोपाळ</strong> येथे देखील राहिला आहे. पोलिस आणि कायद्या पासून वाचण्यासाठी तो सतत आपले location बदलत असतो. तो <strong>पुणे किंवा नवी मुंबई</strong> येथे राहत असून, त्याचे  <strong>तुराडे-रसायनी</strong> आणि <strong>करंजडे-पनवेल</strong> येथे स्थायिक असलेल्या नातेवाईकांना भेटण्यासाठी येत असतो.आदर्श म्हात्रे हा विवाहित असून त्याला पत्नी व एक मुलगा आहे. तो २०१९ पासून फसवणुकीचे धंदे करतो.अटक होऊनही तो bail मधून सुटून बाहेर आल्यावर असे फसवणुकीचे काम चालू ठेवतो .</p>
   <p>आदर्श म्हात्रे हा  <strong>ISRO Scientist, IAS अधिकारी, किंवा IPS अधिकारी</strong>, असल्याची  fake identity cards आणि certificates  वापरून Shaadi.com, Jeevansathi.com ,Divorcee.com अश्या  matrimonial sites वर  महिलांना भेटतो. मुख्यत: <strong>पुणे, मुंबई आणि ठाणे</strong> येथील working महिलांना आपल्या जाळ्यात अडकवतो. तो महागड्या गाड्यासमोर उभे राहून फोटो काढतो आणि Social media वर  fake accounts  काढून महिलांना impress करण्यासाठी त्याचा वापर करतो. एकदा का त्यांचा विश्वास मिळवला की, तो खोटे बोलून, वेगवेगळी कारणे देऊन, "मला  पैशांची तात्काळ आवश्यकता आहे, काही दिवसांत परत करतो" असे सांगून त्यांच्याकडून मोठ्या प्रमाणावर पैसे उकळतो. तसेच,पैसे नसतील तर तो महिलांना instant loan घेण्यास देखील प्रवृत्त करतो. हा पैसे तो Goa येथे जाऊन मौजमजा करण्यासाठी वापरतो. नंतर तो contact तोडून नवीन शिकार  शोधतो.</p>  
 
 <p><strong>तो अशी कामे 2019 पासून करत असून अजूनही सक्रिय आहे.अहवालांनुसार त्याने ५० पेक्षा जास्त महिलांना फसवले आहे</strong>, प्रत्येकीकडून <strong>₹५ लाख ते ₹३५ लाख</strong> पर्यंत पैसे उकळले आहेत. त्याच्याविरुद्ध <strong>फसवणूक</strong> आणि <strong>ठगबाजी</strong>चे अनेक गुन्हे दाखल आहेत. अटक होऊनही तो विविध नावांद्वारे आणि नवीन युक्त्या वापरून अजूनही महिलांना फसवतो.</p>
 
-  <p>If you have encountered this individual or fallen victim to his scams, please report it immediately to the <strong>Thane Crime Branch:</strong></p>
-  <ul>
-    <li>Email: cp.thane.online@mahapolice.gov.in</li>
-    <li>Email: lcb.thane.r@mahapolice.gov.in</li>
-    <li>Phone: 022-25343567</li>
-  </ul>
-  <p>This page is dedicated to raising awareness about his fraudulent activities. <strong>Stay vigilant and do not fall for his scams!</strong></p>
+ <p>⚠️ <strong>What to Do If You Are a Victim</strong> ⚠️</p>
+
+<p>If you have encountered this individual or fallen victim to his scams, do not stay silent. Your silence only allows this scumbag to continue operating freely.</p>
+
+<p><strong>👉 Step 1: Immediately file a cyber complaint by calling 1930 or through the official Cyber Crime Portal (cybercrime.gov.in).</strong></p>
+<p><strong>👉 Step 2: Visit your nearest police station to register an FIR.</strong></p>
+
+<p>Filing a cyber complaint is crucial — it increases the chances of recovering your money because this fraudster always tries to repay victims quickly to keep his Ponzi cycle running and avoid escalation. After filing, remain quiet and let the pressure build until he starts returning your money.</p>
+
+<p><strong>Victims should also file complaints with the Maharashtra State Commission for Women to ensure stronger action.</strong></p>
+<p>Remember: speaking up protects not only you but also future victims. Staying silent only gives this manipulative scammer more power.</strong></p>
+
+<p>This page is dedicated to raising awareness about his fraudulent activities. <strong>Stay vigilant and do not fall for his scams!</strong></p>
 </section>
 
-
+<!-- Video Section -->
 <section class="video-section">
-
 <h2>Video Evidences</h2>
 <iframe src="https://www.youtube.com/embed/ubxJvnvhow8" frameborder="0" allowfullscreen style="margin-bottom: 20px;"></iframe>
-
-<iframe src="https://www.youtube.com/embed/hPlx547D30s" frameborder="0" allowfullscreen style="margin-bottom: 20px;"></iframe>
-
 <iframe src="https://www.youtube.com/embed/WdK7qwMdVVo" frameborder="0" allowfullscreen style="margin-bottom: 20px;"></iframe>
-
 </section>
 
+<!-- Gallery Section -->
 <section class="gallery">
-  <h2>Fake ID and Documents</h2>
+<h2>Fake ID and Documents</h2>
+<div class="gallery-row center-landscape">
+<img src="1.jpg" alt="Adarsh Mhatre" class="landscape-img" loading="lazy">
+<img src="2.png" alt="Adarsh Mhatre" class="landscape-img" loading="lazy">
+</div>
 
-   <div class="gallery-row center-landscape">
-    <img src="id_card1.jpg" alt="Isro Jayesh Patil" class="landscape-img loading="lazy">
-    <img src="isroSelfie.png" alt="Finanacial FRaudster Adarsh Mhatre" class="landscape-img" loading="lazy">
-  </div>
-
-   <!-- Second row -->
-  <div class="gallery-row">
-    <img src="isro_badge.jpg" alt="Fake ISRO ID-Jayesh Patil-Scientist" loading="lazy">
-    <img src="screenshot_profile1.jpg" alt="Adarsh Prashant Mhatre" loading="lazy">	
-    <img src="fake_identity_docs.jpg" alt="Adarsh Mhatre panvel" loading="lazy">
-    <img src="news_clip1.jpg" alt="Adarsh Prashant Mhatre" loading="lazy">
-
-   
-  </div>
-  
-   <!-- Third row -->
-  <div class="gallery-row">
-    <img src="10.PNG" alt="Adarsh Prashant Mhatre -Financial Fraudster" loading="lazy">  
-    <img src="12.PNG" alt="Adarsh Mhatre Alibaug" loading="lazy">  
-    <img src="I1.png" alt="ISRO Scientist" loading="lazy">  
-    <img src="15.jpg" alt="Adarsh Mhatre Panvel Alibaug" loading="lazy" > 
-  
-  </div>
-  
-   
 <div class="gallery-row">
-    <img src="11.PNG" alt="Scammer fraudster Adarsh Mhatre" loading="lazy">
-    <img src="R1.jpg" alt="Jayesh Patil" loading="lazy">
-    <img src="R2.jpeg" alt="Adarsh Prashant Mhatre" loading="lazy">  
-    <img src="R3.jpg" alt="Adarsh Mhatre Rasayani" loading="lazy">    
-   
-  </div>
+<img src="3.jpg" alt="Adarsh Mhatre" loading="lazy">
+<img src="4.jpg" alt="Adarsh Prashant Mhatre" loading="lazy">  
+<img src="5.jpg" alt="Adarsh Mhatre" loading="lazy">
+<img src="6.jpg" alt="Adarsh Prashant Mhatre" loading="lazy">
+</div>
+
+<div class="gallery-row">
+<img src="7.PNG" alt="Adarsh Prashant Mhatre" loading="lazy">  
+<img src="8.PNG" alt="Adarsh Mhatre" loading="lazy">  
+<img src="9.jpg" alt="Adarsh Mhatre" loading="lazy">  
+<img src="11.PNG" alt="Adarsh Mhatre" loading="lazy">
+</div>
+
+<div class="gallery-row">
+
+<img src="R1.jpg" alt="Adarsh Mhatre" loading="lazy">
+<img src="R2.jpeg" alt="Adarsh Prashant Mhatre" loading="lazy">  
+<img src="R3.jpg" alt="Adarsh Mhatre" loading="lazy">  
+<img src="15.jpg" alt="Adarsh Mhatre" loading="lazy"> 
+</div>
 </section>
 
-
+<!-- News Articles -->
 <section class="news-articles">
 <h2>News Articles</h2>
 <a href="https://timesofindia.indiatimes.com/city/thane/scientist-seeking-bride-dupes-14-women-of-1cr/articleshow/88906796.cms" target="_blank">1. Times of India - Scientist seeking bride dupes 14 women</a>
-
- <a href="https://www.hindustantimes.com/cities/mumbai-news/fraudster-poses-as-isro-scientist-dupes-woman-of-22l-101642424979232.html#" target="_blank">
-    2. Hindustan Times - Fraudster poses as ISRO scientist, dupes woman of ₹22 lakh
-  </a>
+<a href="https://www.hindustantimes.com/cities/mumbai-news/fraudster-poses-as-isro-scientist-dupes-woman-of-22l-101642424979232.html#" target="_blank">2. Hindustan Times - Fraudster poses as ISRO scientist, dupes woman of ₹22 lakh</a>
 <a href="https://www.hindustantimes.com/cities/mumbai-news/serial-fraudster-arrested-in-thane-for-cheating-women-through-matrimonial-websites-101642170249109-amp.html" target="_blank">3. Hindustan Times - Serial fraudster arrested</a>
-
 <a href="https://www.hindustantimes.com/cities/mumbai-news/matrimonial-frauds-mumbai-police-warns-prospective-brides-and-grooms-101645366696883-amp.html" target="_blank">4. Hindustan Times - Police warning</a>
-
- <a href="https://www.freepressjournal.in/mumbai/thane-crime-branch-arrest-29-year-old-man-for-cheating-multiple-women-through-matrimonial-sites" target="_blank">
-    5. Free Press Journal - Thane Crime Branch arrest 29-year-old for cheating women
-  </a>
-<a href="https://www.timesnownews.com/amp/mumbai/article/thane-crime-news-posing-as-isro-official-man-dupes-woman-he-met-on-matrimonial-site-held/849518" target="_blank">
-    6. Times Now - Posing as ISRO official, man dupes woman on matrimonial site
-  </a>
-
+<a href="https://www.freepressjournal.in/mumbai/thane-crime-branch-arrest-29-year-old-man-for-cheating-multiple-women-through-matrimonial-sites" target="_blank">5. Free Press Journal - Thane Crime Branch arrest 29-year-old for cheating women</a>
+<a href="https://www.timesnownews.com/amp/mumbai/article/thane-crime-news-posing-as-isro-official-man-dupes-woman-he-met-on-matrimonial-site-held/849518" target="_blank">6. Times Now - Posing as ISRO official, man dupes woman on matrimonial site</a>
 <a href="https://www.tv9marathi.com/latest-news/fraud-with-women-on-matrimonial-website-police-arrested-aaditya-mhatre-167910.html/amp" target="_blank">7. TV9 Marathi - Aaditya Mhatre Arrest</a>
 <a href="https://www.tv9marathi.com/crime/pune-crime/jeevansathi-com-lures-young-woman-from-lonavla-for-rs-14-lakh-645979.html/amp" target="_blank">8. TV9 Marathi - Jeevansathi.com Fraud</a>
-<a href="https://www.republicworld.com/india/mumbai-police-arrests-man-for-duping-25-girls-by-posing-as-ias-officer" target="_blank">
-    9. Republic World - Mumbai Police arrests man for duping 25 girls
-      </a>
-    <a href="https://www.indiatoday.in/crime/story/mumbai-man-arrested-posing-ias-officer-matrimonial-site-duping-around-25-girls-1638010-2020-01-18" target="_blank">
-    10. India Today - Mumbai man arrested for duping around 25 girls
-  </a>
-   <a href="https://www.ndtv.com/mumbai-news/mumbai-man-posed-as-ias-officer-on-matrimonial-site-to-dupe-women-arrested-2166127" target="_blank">
-    11. NDTV - Mumbai man posed as IAS officer to dupe women
-  </a>
-
-  
+<a href="https://www.republicworld.com/india/mumbai-police-arrests-man-for-duping-25-girls-by-posing-as-ias-officer" target="_blank">9. Republic World - Mumbai Police arrests man for duping 25 girls</a>
+<a href="https://www.indiatoday.in/crime/story/mumbai-man-arrested-posing-ias-officer-matrimonial-site-duping-around-25-girls-1638010-2020-01-18" target="_blank">10. India Today - Mumbai man arrested for duping around 25 girls</a>
+<a href="https://www.ndtv.com/mumbai-news/mumbai-man-posed-as-ias-officer-on-matrimonial-site-to-dupe-women-arrested-2166127" target="_blank">11. NDTV - Mumbai man posed as IAS officer to dupe women</a>
 <a href="https://bhararinews.co.in/?p=22003" target="_blank">12. Bharari News</a>
-
-  <a href="https://www.dnaindia.com/india/video-man-poses-as-ips-officer-dupes-several-women-in-mumbai-2809900" target="_blank">13. DNA India - Video</a>
+<a href="https://www.dnaindia.com/india/video-man-poses-as-ips-officer-dupes-several-women-in-mumbai-2809900" target="_blank">13. DNA India - Video</a>
 <a href="https://www.esakal.com/amp/mumbai/5-lakh-fraud-young-woman-wedding-site-240548" target="_blank">14. Esakal</a>
 
-  <section>
-  <p><strong>Disclaimer:</strong> All information provided on this page has been sourced from publicly available news articles. This page is intended solely for raising awareness and educating individuals about fraudulent activities. The creators of this page do not intend to defame or harm anyone’s reputation. If you believe any information is inaccurate, please contact the relevant authorities or news outlets for clarification.</p>
-</section>
-
-
+<section>
+<p><strong>Disclaimer:</strong> All information provided on this page has been sourced from publicly available news articles and from victims who have shared their experiences anonymously. This page is intended solely for raising awareness and educating individuals about fraudulent activities. The creators of this page do not intend to defame or harm anyone’s reputation. If you believe any information is inaccurate, please contact the relevant authorities or news outlets for clarification.</p>
 </section>
 
 </body>
-
+</html>
 
